// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and migrate cross-cloud workloads to Azure with migration reports and code conversion guidance. Supports AWS, GCP, and other providers. WHEN: migrate Lambda to Azure Functions, migrate AWS to Azure, Lambda migration assessment, convert AWS serverless to Azure, migration readiness report, migrate from AWS, migrate from GCP, cross-cloud migration.",
  "extractedKeywords": [
    "assess",
    "assessment",
    "azure",
    "cloud",
    "code",
    "conversion",
    "convert",
    "cross-cloud",
    "deploy",
    "from",
    "function",
    "functions",
    "guidance",
    "lambda",
    "mcp",
    "migrate",
    "migration",
    "other",
    "providers",
    "readiness",
    "report",
    "reports",
    "serverless",
    "supports",
    "when",
    "with",
    "workloads",
  ],
  "name": "azure-cloud-migrate",
}
`;

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "assess",
  "assessment",
  "azure",
  "cloud",
  "code",
  "conversion",
  "convert",
  "cross-cloud",
  "deploy",
  "from",
  "function",
  "functions",
  "guidance",
  "lambda",
  "mcp",
  "migrate",
  "migration",
  "other",
  "providers",
  "readiness",
  "report",
  "reports",
  "serverless",
  "supports",
  "when",
  "with",
  "workloads",
]
`;
